--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,15 +42,18 @@ dependencies:
   scrollable_positioned_list: ^0.2.0-nullsafety.0
   flutter_slidable: ^0.6.0-nullsafety.0
   path: ^1.8.0
-  file_picker: 3.0.2+2
+  file_picker: ^4.1.3
   image_picker: ^0.8.0+3
   universal_html: ^2.0.7
   qr_code_scanner: ^0.5.1
-  flutter_map: ^0.13.1
+  flutter_map: ^0.14.0
   url_launcher: ^6.0.3
   flutter_swiper: ^1.1.6
   signature: ^4.1.1
-  charts_flutter: ^0.10.0
+  charts_flutter:
+    git:
+      url: https://github.com/google/charts
+      path: charts_flutter
   flutter_gauge: ^1.0.8
 
 dependency_overrides:
