--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ version: 1.1.0+15
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
+  flutter: "2.2.2"
 
 dependencies:
   flutter:
@@ -18,7 +19,7 @@ dependencies:
     sdk: flutter
   bloc: 7.0.0
   flutter_bloc: 7.0.0
-  http: 0.13.0
+  http: 0.13.2
   dartz: 0.10.0-nullsafety.1
   get_it: 7.1.3
   shared_preferences: 2.0.4
@@ -59,7 +60,7 @@ dependency_overrides:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mockito: 5.0.5
+  mockito: 5.0.7
   build_runner: 2.0.1
 
 flutter:
