--- a/package.json
+++ b/package.json
@@ -22,21 +22,23 @@
     "copyBuildWeb": "trash deploy/web && st-cp build/web deploy/",
     "copyBuildAndroid": "trash deploy/android && st-cp build/app/outputs/apk/release/ deploy/android/",
     "copyBuildIos": "trash deploy/ios && st-cp ios deploy/ios",
-    "copyBuild": "run-s copyBuildWeb && run-s copyBuildAndroid && run-s copyBuildIos",
-    "buildIos": "flutter build ios --release --no-sound-null-safety --dart-define=PROD=true",
-    "buildAndroid": "flutter build apk --release --no-sound-null-safety --dart-define=PROD=true",
-    "buildWeb": "flutter build web --release --no-sound-null-safety --dart-define=PROD=true",
     "update-version": "node scripts/update_app_version.js",
+    "increase-build-no": "node scripts/update_app_version.js increaseBuildNo",
+    "build-ios": "flutter build ios --release --no-sound-null-safety --dart-define=PROD=true",
+    "build-android": "flutter build apk --release --no-sound-null-safety --dart-define=PROD=true",
+    "build-web": "flutter build web --release --no-sound-null-safety --dart-define=PROD=true",
 
     "//": 
-      ["build:", 
-       "    *) Updates version info from pubspec.yaml to app_version.json and sets current date and commit",
-       "    *) Builds Adnroid, iOS and Web to /deploy folder",
-       "buildAndroidAndWebOnly:", 
-       "    *) Updates version info from pubspec.yaml to app_version.json and sets current date and commit",
-       "    *) Builds Adnroid and Web only to /deploy folder"],
-    "build": "flutter clean && run-s update-version && run-s update-version && run-s buildAndroid && run-s buildIos && run-s buildWeb && run-s copyBuild",
-    "buildAndroidAndWebOnly": "flutter clean && run-s update-version && run-s buildAndroid && run-s buildWeb && run-s copyBuild"
+      ["buildios, buildandroid, buildweb:", 
+       "    *) Updates version info from pubspec.yaml to assets/version/app_version.json and sets current date and commit",
+       "    *) Builds Adnroid, iOS or Web to /deploy folder",
+       "increasebuildnumber:", 
+       "    *) Increases build number in pubspec.yaml and updates version info to assets/version/app_version.json and sets",
+       "       current date and commit"],
+    "increasebuildnumber": "run-s increase-build-no && run-s update-version",
+    "buildios": "flutter clean && run-s update-version && run-s build-ios && run-s copyBuildIos",
+    "buildandroid": "flutter clean && run-s update-version && run-s build-android && run-s copyBuildAndroid",
+    "buildweb": "flutter clean && run-s update-version && run-s build-web && run-s copyBuildWeb"
   },
   "repository": {
     "type": "git",
