--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   beamer: ^1.4.0+1
   flutter_map: ^0.14.0
   latlong2: ^0.8.1
+  scrollable_positioned_list: ^0.3.1
 
 flutter:
   assets:
