Drawer menu Image and style fixes

--- a/assets/config/app.conf.json
+++ b/assets/config/app.conf.json
@@ -1,7 +1,7 @@
 {
   "startupParameters": {
-    "username" : "layout2",
-    "password" : "layout2"
+    "username" : "features",
+    "password" : "features"
   },
 
   "uiConfig": {
