--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   scrollable_positioned_list: ^0.3.1
   syncfusion_flutter_charts: ^20.1.55
   syncfusion_flutter_gauges: ^20.1.55
+  url_launcher: ^6.1.2
 
 flutter:
   assets:
