--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -24,6 +24,7 @@ linter:
   rules:
     constant_identifier_names: false
     avoid_function_literals_in_foreach_calls: false
+    unawaited_futures: true
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
 
