--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,8 @@ dependencies:
     # Used for routing with navigator 2.0
   beamer: ^1.4.0+1
     # Used for offline mode
-  sqflite: ^2.0.3
-  path: ^1.8.2
+  sqflite: ^2.0.2+1
+  path: ^1.8.0
   flutter_map: ^0.14.0
   latlong2: ^0.8.1
   scrollable_positioned_list: ^0.3.1
