--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,9 @@
 name: flutter_client
-description: Generic Client
+description: A generic Flutter app for JVx applications.
+homepage: https://www.sibvisions.com/
+repository: https://github.com/sibvisions/flutterclient
+issue_tracker: https://github.com/sibvisions/flutterclient/issues
+
 publish_to: 'none'
 
 version: 1.0.0+1
