Renamed to flutter_jvx

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_client
+name: flutter_jvx
 description: A generic Flutter app for JVx applications.
 homepage: https://www.sibvisions.com/
 repository: https://github.com/sibvisions/flutterclient
