--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -25,6 +25,8 @@ linter:
     constant_identifier_names: false
     avoid_function_literals_in_foreach_calls: false
     unawaited_futures: true
+    avoid_relative_lib_imports: true
+    prefer_relative_imports: true
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
 
