--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,6 @@ environment:
 
 dependencies:
   # Flutter Dep
-  flutter_lints: ^1.0.4
   flutter:
     sdk: flutter
   flutter_localizations:
@@ -67,6 +66,9 @@ dependencies:
   charts_flutter: ^0.12.0
   gauges: ^1.0.0
   shared_preferences: ^2.0.15
+
+dev_dependencies:
+  flutter_lints: ^1.0.4
 
 flutter:
   assets:
