--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.16.2 <3.0.0"
+  sdk: ">=2.17.6 <3.0.0"
 
 dependencies:
   # Flutter Dep
@@ -20,6 +20,7 @@ dependencies:
 
   # REST handling
   universal_io: ^2.0.4
+  universal_html: ^2.0.8
 
   # iOS Dep
   cupertino_icons: ^1.0.2
@@ -27,6 +28,7 @@ dependencies:
   # Custom Dep
 
   package_info_plus: ^1.4.2
+  device_info_plus: ^4.0.1
 
   # SVG Support
   flutter_svg: ^1.0.3
@@ -66,6 +68,7 @@ dependencies:
   charts_flutter: ^0.12.0
   gauges: ^1.0.0
   shared_preferences: ^2.0.15
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_lints: ^1.0.4
