--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,18 +65,15 @@ dependencies:
   signature: ^5.1.0
   flutter_picker: ^2.0.5
   linked_scroll_controller: ^0.2.0
-  charts_flutter: ^0.12.0
-  gauges: ^1.0.0
-  shared_preferences: ^2.0.15
-  uuid: ^3.0.6
-
-dependency_overrides:
-  # add override of charts_flutter
+  #  charts_flutter: ^0.12.0
   charts_flutter:
     git:
       url: https://github.com/kennenfromchina/charts.git
       path: charts_flutter
       ref: fix_flutter3.0
+  gauges: ^1.0.0
+  shared_preferences: ^2.0.15
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_lints: ^1.0.4
