--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,53 +18,63 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
-  # REST handling
-  universal_io: ^2.0.4
-  universal_html: ^2.0.8
-
   # iOS Dep
   cupertino_icons: ^1.0.2
 
-  # Custom Dep
+  # Translations capability
+  intl: ^0.17.0
 
+  # Config
+  shared_preferences: ^2.0.15
+
+  # Device Identification
   package_info_plus: ^1.4.2
   device_info_plus: ^4.1.0
+  uuid: ^3.0.6
+
+  # Util
+  collection: ^1.16.0
+
+  # IO handling
+  universal_io: ^2.0.4
+  universal_html: ^2.0.8
 
   # SVG Support
-  flutter_svg: ^1.0.3
+  flutter_svg: ^1.1.4
   flutter_svg_provider: ^1.0.3
   # Icons
   font_awesome_flutter: ^10.1.0
-  # Translations capability
-  intl: ^0.17.0
   # Managing different persistent classes
   get_it: ^7.2.0
   # QR Scanner
   mobile_scanner: ^2.0.0
+  # Signature Pad
+  signature: ^5.2.1
   # Saving files on system
-  path_provider: ^2.0.9
-  # handling zip files
-  archive: ^3.2.2
+  path: ^1.8.1
+  path_provider: ^2.0.11
+  # Zip files handling
+  archive: ^3.3.1
   # Special Slivers for lists and grids
-  sliver_tools: ^0.2.5
+  sliver_tools: ^0.2.7
   # Auto resizing text widget
   auto_size_text: ^3.0.0
   # Used for routing with navigator 2.0
-  beamer: ^1.4.0+1
+  beamer: ^1.5.2
   # Used for offline mode
-  sqflite: ^2.0.2+1
-  collection: ^1.15.0
-  path: ^1.8.1
+  sqflite: ^2.0.3
   wakelock: ^0.6.2
-  flutter_map: ^1.1.1
+
+  # Custom Dependencies
+  flutter_picker: ^2.0.5
+  flutter_map: ^2.2.0
   latlong2: ^0.8.1
   scrollable_positioned_list: ^0.3.1
   syncfusion_flutter_charts: ^20.1.55
   syncfusion_flutter_gauges: ^20.1.55
-  url_launcher: ^6.1.2
-  signature: ^5.1.0
-  flutter_picker: ^2.0.5
+  url_launcher: ^6.1.5
   linked_scroll_controller: ^0.2.0
+
   #  charts_flutter: ^0.12.0
   charts_flutter:
     git:
@@ -72,8 +82,6 @@ dependencies:
       path: charts_flutter
       ref: fix_flutter3.0
   gauges: ^1.0.0
-  shared_preferences: ^2.0.15
-  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_lints: ^1.0.4
