--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -64,7 +64,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "at.sibvisions.flutter_jvx"
+        applicationId "com.sibvisions.flutter_jvx"
         minSdkVersion 21
         targetSdkVersion 33
         versionCode flutterVersionCode.toInteger()
