--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ dependencies:
   syncfusion_flutter_gauges: ^20.1.55
   url_launcher: ^6.1.5
   linked_scroll_controller: ^0.2.0
+  liquid_progress_indicator: ^0.4.0
 
   #  charts_flutter: ^0.12.0
   charts_flutter:
