Improved settings page and removed custom version

--- a/assets/config/app.conf.json
+++ b/assets/config/app.conf.json
@@ -14,8 +14,7 @@
   },
   "versionConfig": {
     "commit": "<undefined>",
-    "buildDate": 0,
-    "version": "<undefined>"
+    "buildDate": 0
   },
   "startupParameters": {
   }
