--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,7 @@ dependencies:
   gauges: ^1.0.0
   image_picker: ^0.8.5+3
   file_picker: ^5.0.1
+  file_saver: ^0.1.1
 
 dev_dependencies:
   flutter_lints: ^2.0.1
