--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -11,19 +11,17 @@ def keystorePropertiesFile = rootProject.file('key.properties')
 
 if (keystorePropertiesFile.exists()) {
     keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
-}
-else {
+} else {
     keystorePropertiesFile = rootProject.file('../creator/android/key.properties')
 
     if (keystorePropertiesFile.exists()) {
         keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
-    }    
-    else {
+    } else {
         keystorePropertiesFile = rootProject.file('../../../android/key.properties')
 
         if (keystorePropertiesFile.exists()) {
             keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
-        }    
+        }
     }
 }
 
@@ -76,7 +74,7 @@ android {
         release {
             keyAlias keystoreProperties['keyAlias']
             keyPassword keystoreProperties['keyPassword']
-            storeFile keystoreProperties['storeFile'] ? rootProject.file(keystorePropertiesFile.getParent() +'/' + keystoreProperties['storeFile']) : null
+            storeFile keystoreProperties['storeFile'] ? rootProject.file(keystorePropertiesFile.getParent() + '/' + keystoreProperties['storeFile']) : null
             storePassword keystoreProperties['storePassword']
         }
     }
