--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   # Util
   collection: ^1.16.0
   rxdart: ^0.27.5
+  flutter_html: ^3.0.0-alpha.5
 
   # IO handling
   universal_io: ^2.0.4
