Added websocket support

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   universal_io: ^2.0.4
   universal_html: ^2.0.8
 
+  web_socket_channel: ^2.2.0
+
   # SVG Support
   flutter_svg: ^1.1.4
   flutter_svg_provider: ^1.0.3
