--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   uuid: ^3.0.6
 
   # Util
+  logger: ^1.1.0
   collection: ^1.16.0
   rxdart: ^0.27.5
   flutter_html: ^3.0.0-alpha.5
