--- a/web/manifest.json
+++ b/web/manifest.json
@@ -5,7 +5,7 @@
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "Generic Client",
+    "description": "A generic Flutter app for JVx applications.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
