Added base-href to web build

--- a/creator/build.xml
+++ b/creator/build.xml
@@ -323,6 +323,8 @@ the License.
       <arg value="build" />
       <arg value="web" />
       <arg value="--release" />
+      <arg value="--base-href" />
+      <arg value="/mobile/" />
     </exec>
 
     <copy todir="${install}/web">
