--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "flutter_jvx",
-    "short_name": "flutter_jvx",
+    "name": "JVx Mobile",
+    "short_name": "JVx",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
