--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   logger: ^1.1.0
   collection: ^1.16.0
   rxdart: ^0.27.5
+  queue: ^3.1.0+1
   flutter_html: ^3.0.0-alpha.5
 
   # IO handling
