Added buildNumber to version config

--- a/assets/config/app.conf.json
+++ b/assets/config/app.conf.json
@@ -15,7 +15,8 @@
   },
   "versionConfig": {
     "commit": "<undefined>",
-    "buildDate": 0
+    "buildDate": 0,
+    "buildNumber": 0
   },
   "startupParameters": {
   }
