--- a/creator/build.xml
+++ b/creator/build.xml
@@ -276,7 +276,7 @@ the License.
 
     <!-- as number -->
     <replaceregexp byline="true">
-      <regexp pattern="&quot;buildDate&quot;\s*:\s*(\d+)"/>
+      <regexp pattern="&quot;buildNumber&quot;\s*:\s*(\d+)"/>
       <substitution expression="&quot;buildNumber&quot;: ${build.number}"/>
       <fileset dir="${project.temp}">
         <include name="assets/config/*.json"/>
@@ -287,7 +287,7 @@ the License.
 
     <!-- as number -->  
     <replaceregexp byline="true">
-      <regexp pattern="buildDate\s*:\s*(\d+)"/>
+      <regexp pattern="buildNumber\s*:\s*(\d+)"/>
       <substitution expression="buildNumber: ${build.number}"/>
       <fileset dir="${project.temp}">
         <include name="lib/main.dart"/>
