--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   collection: ^1.16.0
   rxdart: ^0.27.5
   queue: ^3.1.0+1
-  flutter_html: ^3.0.0-alpha.5
+  flutter_html: 3.0.0-alpha.5
 
   # IO handling
   universal_io: ^2.0.4
