--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -96,6 +96,7 @@ dependencies:
   image_picker: ^0.8.5+3
   file_picker: ^5.0.1
   file_saver: ^0.1.1
+  flutter_keyboard_visibility: ^5.4.0
 
 dev_dependencies:
   flutter_lints: ^2.0.1
