--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,7 @@ dependencies:
   url_launcher: ^6.1.5
   linked_scroll_controller: ^0.2.0
   liquid_progress_indicator: ^0.4.0
+  photo_view: ^0.14.0
 
   #  charts_flutter: ^0.12.0
   charts_flutter:
