--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,7 +94,7 @@ dependencies:
       path: charts_flutter
       ref: fix_flutter3.0
   gauges: ^1.0.0
-  image_picker: ^0.8.5+3
+  image_picker: ^0.8.6
   file_picker: ^5.0.1
   file_saver: ^0.1.1
   flutter_keyboard_visibility: ^5.4.0
